# open-secrets-press

./: .gitignore  LICENSE  README.md  main.py  opensecrets_articles_1_to_10.json  opensecrets_articles_1_to_2.json  pyproject.toml
.github/workflows/: static.yml
.tmp_dagster_home_0klz4tou/history/: runs.db
.tmp_dagster_home_0klz4tou/schedules/: schedules.db
.tmp_dagster_home_c6lh_pa3/history/: runs.db
.tmp_dagster_home_c6lh_pa3/schedules/: schedules.db
.tmp_dagster_home_dvvh1zr4/history/: runs.db
.tmp_dagster_home_dvvh1zr4/schedules/: schedules.db
.tmp_dagster_home_kktuh65r/history/: runs.db
.tmp_dagster_home_kktuh65r/schedules/: schedules.db
.tmp_dagster_home_vbr7za_t/history/: runs.db
.tmp_dagster_home_vbr7za_t/schedules/: schedules.db
.tmp_dagster_home_vwqmwky3/storage/: media_cloud_asset
.tmp_dagster_home_xq0d7nfb/history/: runs.db
.tmp_dagster_home_xq0d7nfb/schedules/: schedules.db
data/assets/: db_connection.py  get_media_cloud.py  get_newspaper.py  get_open_secrets.py  get_sentence.py  get_sentences.py  make_csv.py  make_stories_csv.py  make_stories_parquet.py  pipeline.py
data/orchestration/: assets.py  definitions.py
data/setup/: 010_make_staging_tables.sql  015_functions_macros.sql  020_make_reference_tables.sql  040_load_media_outlets.py  050_populate_media_outlet.sql  070 views.sql  080_delete_open_secrets.sql  db_connection.py
db/: media_outlets.csv
db/sql/: 01 Make tables  010 make staging tables  010 make staging tables.sql  020 make tables  050 populate story  (+8 more)
setup/: load_csv.py  load_media_outlets.py
web/: index.html
(+20 files in other folders)
