[project]
name = "open-secrets-press"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "duckdb>=1.4.0",
    "lxml>=6.0.2",
    "mediacloud>=4.4.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
